[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ontio-std = {git = "https://github.com/ontio/ontology-wasm-cdt-rust"}

[lib]
crate-type = ["cdylib", "rlib"] #Compile as a dynamic link library

[features]
mock = ["ontio-std/mock"]