[package]
name = "oep5-receiver"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
ontio-std = { git = "https://github.com/ontio/ontology-wasm-cdt-rust", features = ["bump-alloc"] }
common = { path = "../../common" }

[features]
mock = ["ontio-std/mock"]
